data/derived/sp14/progs/unify/prog4033.ml.out
Characters 145-159:
  and rest = float_of_int n - 1.*(10.** float_of_int s) in
             ^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
